tests/errors/interpreter/arg_num.ny
kawaii func() => {

}

uWu_nyaa() => {
    func(1)
}